K1J-1513: Use certificateServiceTypeId to aggregate and handle certificate types in webcert and certificate service. Use typeName when mapping to issuerTypeId because it is used for presentation to end user. (#1238)